--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    margin: auto;
+    width: 100%;
+    height: 100vh;
+    background-color: #f5f5f5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar{
+    background-color: #f55a5a;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav--icon{
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    color: #dadada;
 }
 
-.App-link {
-  color: #61dafb;
+.main--container{
+    width: 550px;
+    min-height: 704px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card--container{
+    width: 471px;
+    height: 168px;
+    margin: 36px auto;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.image--container{
+    width: 126px;
+    height: 168px;
+    display: flex;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.image--container img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.details--container{
+    width: 326px;
+    height: 144px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+.details--container h1{
+    font-size: 25px;
+    font-weight: 700;
+    color: #2B283A;
+    margin-bottom: 10px;
+}
+
+.details--container h3{
+    font-size: 10px;
+    font-weight: 700;
+    color: #2B283A;
+    margin-bottom: 10px;
+}
+
+.details--container p{
+    font-size: 10px;
+    font-weight: 400;
+    color: #2B283A;
+    margin: 0 10px 10px 0;
+}
+
+.details--container__top{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.details--container__top p{
+    font-size: 10px;
+    font-weight: 400;
+    color: #2B283A;
+}
+
+.details--container__top a{
+    font-size: 10px;
+    font-weight: 400;
+    color: #918E9B;
+    margin-left: 10px;
+}
+
+.icon{
+    color: #F55A5A;
+    width: 10px;
+    height: 9px;
 }
